--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,7 @@ files:
   - source: /
     destination: /var/tmp/testing/
 hooks:
-  BeforeInstall:
+  AfterInstall:
     - location: scripts/before_install.sh
       timeout: 300
       runas: root
